--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -5,6 +5,7 @@
   border: none;
   padding: 6px;
   box-shadow: 1px 1px 2px black, -1px -1px 2px black;
+  border-radius: 5px;
 
   &:active {
     box-shadow: none
