--- a/src/components/organisms/App.module.scss
+++ b/src/components/organisms/App.module.scss
@@ -1,12 +1,13 @@
 .AppContainer {
- width: 80%;
- display: flex;
- flex-direction: column;
- gap: 20px;
- min-height: 90vh;
- margin: 5vh auto auto;
- border: 1px solid gray;
- border-radius: 9px;
- background-color: white;
- box-shadow: 0 0 7px darkgray;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  min-height: 90vh;
+  margin: 5vh auto auto;
+  border: 1px solid gray;
+  border-radius: 9px;
+  background-color: white;
+  box-shadow: 0 0 7px darkgray;
+  padding: 20px;
 }
