--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -6,6 +6,9 @@
   padding: 6px;
   box-shadow: 1px 1px 2px black, -1px -1px 2px black;
   border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:active {
     box-shadow: none
