--- a/src/components/organisms/UnitLine/UnitLine.module.scss
+++ b/src/components/organisms/UnitLine/UnitLine.module.scss
@@ -1,11 +1,17 @@
 .UnitLine {
-  display: flex;
-  gap: 20px;
-  border: 1px solid black;
-  //padding: 10px;
+  display: grid;
+  grid-template-columns: 20% 10% 10%;
+  border-bottom: none;
 
   div {
-    border-right: 1px solid black;
+    border: 1px solid black;
+    border-right: none;
+    border-top: none;
     padding: 10px;
+
+    &:last-child {
+      border-right: 1px solid black;
+    }
   }
+
 }
