Changer la quantité plus fluide

--- a/src/components/organisms/UnitLine/UnitLine.module.scss
+++ b/src/components/organisms/UnitLine/UnitLine.module.scss
@@ -14,4 +14,17 @@
     }
   }
 
+  .UnitLineQuantity {
+    display: flex;
+    gap: 10px;
+
+    >button {
+      width: 20px;
+    }
+
+    .UnitLineQuantityInput {
+      width: 50px;
+    }
+  }
+
 }
