--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -3,8 +3,8 @@
   font-weight: bold;
   color: white;
   border: none;
-  padding: 6px;
-  box-shadow: 1px 1px 2px black, -1px -1px 2px black;
+  padding: 5px;
+  box-shadow: 0 0 5px black, 0 0 3px black;
   border-radius: 5px;
   display: flex;
   justify-content: center;
