--- a/src/components/organisms/ArmyCreation/ArmyCreation.module.scss
+++ b/src/components/organisms/ArmyCreation/ArmyCreation.module.scss
@@ -28,7 +28,7 @@
 
     .ArmyCategoryUnits {
       display: grid;
-      grid-template-columns: 20% 10% 10%;
+      grid-template-columns: 20% 10% 30% 10%;
 
       div {
         border: 1px solid black;
@@ -36,13 +36,14 @@
         border-left: none;
         padding: 10px;
 
-        &:nth-child(3n+1) {
+        &:nth-child(4n+1) {
           border-left: 1px solid black;
         }
 
         &:nth-child(1),
         &:nth-child(2),
-        &:nth-child(3) {
+        &:nth-child(3),
+        &:nth-child(4) {
           border-top: 1px solid black;
           border-bottom: 2px solid black;
         }
