--- a/src/components/organisms/UnitLine/UnitLine.module.scss
+++ b/src/components/organisms/UnitLine/UnitLine.module.scss
@@ -1,10 +1,17 @@
+.UnitLineName {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .UnitLineQuantity {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   > button {
     width: 20px;
-    height: 26px;
+    height: 20px;
   }
 
   .UnitLineQuantityInput {
@@ -12,30 +19,4 @@
     width: 50%;
     min-width: 24px;
   }
-}
-
-.UnitLineOptions {
-  display: flex;
-  border: 2px solid red;
-  padding: 0;
-  gap: 20px;
-
-  .UnitLineOptionsList {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-
-    .Option {
-      display: flex;
-      gap: 10px;
-    }
-  }
-}
-
-
-.AddOptionModal {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-top: 20px;
 }
