--- a/src/components/organisms/CreateNewArmy/CreateNewArmy.module.scss
+++ b/src/components/organisms/CreateNewArmy/CreateNewArmy.module.scss
@@ -1,16 +1,15 @@
-.NewArmyModal {
+.AllArmiesList {
   display: flex;
-  flex-direction: column;
-  width: 400px;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-evenly;
 
-  div:first-child {
-    margin-top: 10px;
-    font-size: 18px;
-  }
+  .ArmiesList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  button {
-    margin-top: 5px;
-    cursor: pointer;
+    * + * {
+      margin-top: 15px;
+    }
   }
 }
